Fix spacing in CSS and added a design in my contact form

--- a/contact-style.css
+++ b/contact-style.css
@@ -53,6 +53,7 @@ h6 {
 body {
     background-color: var(--color-1);
 }
+
 /* NAVIGATION */
 nav {
     position: sticky;
@@ -96,18 +97,25 @@ nav #back-button a::after {
 /* CONTACT */
 #contact-section {
     background-color: var(--color-2);
-    padding: 10px;
+    padding: 10px 20px;
     max-width: 600px;
     margin: 30px auto;
     border-radius: 4px;
 }
+
 #contact-section h1 {
     text-align: center;
 }
+
 .form-group label {
     color: var(--color-4);
     font-weight: 600;
 }
+
+form {
+    margin-top: 20px;
+}
+
 .form-group label,
 .form-group input,
 .form-group textarea {
@@ -120,11 +128,33 @@ nav #back-button a::after {
     padding: 5px;
 }
 
+.form-group input,
+textarea {
+    outline: none;
+    border: none;
+    border-bottom: 4px solid var(--color-4);
+    position: relative;
+    transition: all 0.2s ease-in;
+}
+
+.form-group textarea:focus,
+input:focus {
+    border-bottom: 4px solid var(--color-5);
+}
+
 .form-group textarea {
     width: 100%;
 }
+
 #submit-button {
     cursor: pointer;
+    font-weight: 600;
+}
+
+#submit-button:hover {
+    border-bottom: 4px solid var(--color-4);
+    background-color: var(--color-4);
+    color: var(--color-1);
 }
 
 #form-bottom-text {
@@ -132,7 +162,9 @@ nav #back-button a::after {
     margin-top: -8px;
     color: var(--color-4);
     font-weight: 500;
+    font-size: 12px;
 }
+
 /* SOCIAL MEDIAS */
 #social-medias {
     background-color: var(--color-2);
@@ -142,16 +174,23 @@ nav #back-button a::after {
     text-align: center;
     color: var(--color-4);
 }
+
 #social-medias span {
     color: var(--color-5);
 }
-ul {
-    list-style-type: none;
-    margin: 15px 0;
+
+#social-media-links {
+    display: flex;
+    justify-content: center;
 }
-li {
-    display: inline;
-    margin: 0 15px;
+
+#social-medias img {
+    height: 35px;
+}
+
+#social-medias a {
+    height: 35px;
+    margin: 12px;
 }
 
 /* FOOTER */
@@ -167,4 +206,29 @@ li {
     font-size: 12px;
     margin-top: 5px;
     color: var(--color-2);
+}
+
+/* For large device */
+@media screen and (min-width: 576px) {
+    .form-group label,
+    .form-group input,
+    .form-group textarea {
+        margin: 7px 0;
+        width: 50%;
+    }
+
+    .form-group textarea {
+        width: 70%;
+    }
+
+    #submit-button {
+        width: 30%;
+    }
+
+    #form-bottom-text {
+        text-align: left;
+        margin-top: -8px;
+        color: var(--color-4);
+        font-weight: 500;
+    }
 }
